[gd_scene load_steps=14 format=3 uid="uid://gvvsrm3j5qrg"]

[ext_resource type="Script" uid="uid://c8gugtd3kd77v" path="res://scripts/lobby.gd" id="1_4afvb"]
[ext_resource type="Shader" uid="uid://d0ap8stfy4642" path="res://shaders/ps1.gdshader" id="1_ghx6g"]
[ext_resource type="PackedScene" uid="uid://bwggrf7sbmkcv" path="res://scenes/PlayerCharacter/PlayerCharacterScene.tscn" id="2_4afvb"]
[ext_resource type="PackedScene" uid="uid://cqfgnbt5ioaj4" path="res://scenes/MAPS/ilha.tscn" id="3_iur28"]
[ext_resource type="PackedScene" uid="uid://c0a5krbfucvuu" path="res://scenes/BUILDING/predio_1.tscn" id="4_mjde3"]
[ext_resource type="PackedScene" uid="uid://b31o3sfuacmyb" path="res://scenes/CHARACTERS/pickup.tscn" id="5_g7hr2"]
[ext_resource type="AudioStream" uid="uid://c0ls41qo4lm1t" path="res://assets/sound/winter-wind-402331.mp3" id="6_21uur"]
[ext_resource type="PackedScene" uid="uid://c15w2ag2mbept" path="res://scenes/lobby.tscn" id="7_4afvb"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_yqjtg"]
sky_top_color = Color(0.3525444, 0.30746943, 0.17695916, 1)
sky_horizon_color = Color(0.44844615, 0.37595028, 0.22365806, 1)
sky_curve = 0.13995492
sky_cover_modulate = Color(0.06879827, 0.06879828, 0.06879828, 1)
ground_horizon_color = Color(0.26267642, 0.18859994, 0.0016262899, 1)

[sub_resource type="Sky" id="Sky_lnu2h"]
sky_material = SubResource("ProceduralSkyMaterial_yqjtg")
radiance_size = 2

[sub_resource type="Environment" id="Environment_lbhrr"]
background_mode = 2
sky = SubResource("Sky_lnu2h")
ambient_light_color = Color(0.4652294, 0.34342623, 0.11550174, 1)
ambient_light_energy = 1.97
reflected_light_source = 1
tonemap_mode = 2
tonemap_white = 0.52
adjustment_enabled = true
adjustment_contrast = 1.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iywne"]
render_priority = 0
shader = ExtResource("1_ghx6g")
shader_parameter/dither_amount = 0.5

[sub_resource type="QuadMesh" id="QuadMesh_p57ef"]
flip_faces = true
size = Vector2(2, 2)

[node name="3Dmutiplayer" type="Node3D"]
script = ExtResource("1_4afvb")
playerScene = ExtResource("2_4afvb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.47255066, 0.33726028, -0.8142182, 0, 0.9238795, 0.38268346, 0.8813035, -0.18083732, 0.43657988, 0, 0, 0)
shadow_bias = 0.294
shadow_normal_bias = 0.447
directional_shadow_max_distance = 722.0
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lbhrr")

[node name="shader" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_iywne")
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_p57ef")

[node name="Mapa1" type="Node3D" parent="."]

[node name="ilha" parent="Mapa1" instance=ExtResource("3_iur28")]
transform = Transform3D(35.822765, 0, 0, 0, 35.822765, 0, 0, 0, 35.822765, 0, 0, 0)

[node name="predio1" parent="Mapa1" instance=ExtResource("4_mjde3")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -47.827427, 0.05168748, -44.235283)

[node name="pickup" parent="Mapa1" instance=ExtResource("5_g7hr2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.591927, 1.3220987, -26.507856)

[node name="Spawn" type="Node3D" parent="Mapa1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -59.563835, 3.950935, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_21uur")
volume_db = -5.777
autoplay = true
parameters/looping = true

[node name="LOBBY" parent="." instance=ExtResource("7_4afvb")]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://bwggrf7sbmkcv")
spawn_path = NodePath("..")

[connection signal="pressed" from="LOBBY/MarginContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="LOBBY/MarginContainer2/join" to="." method="_on_join_pressed"]

[editable path="LOBBY"]
